--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.userosscache
 *.sln.docstates
 
+#Store associations
+Package.StoreAssociation.xml
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
